--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "display_name": "复制消息插件",
+    "display_name": "复制消息插件2.0",
     "loading_order": 10,
     "requires": [],
     "optional": [],
